--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -17,7 +17,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo.NoActionBar" >
         <activity
             android:name="com.example.weibo_yamba.SSO_Main"
             android:label="@string/app_name" >
@@ -27,9 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.example.weibo_yamba.StatusActivity" >
+        </activity>
         <activity
-            android:name="com.example.weibo_yamba.StatusActivity"
-            android:label="@string/app_name" >
+            android:name="com.example.weibo_yamba.PrefsActivity"
+            android:label="@string/titlePrefs" >
         </activity>
     </application>
 
