--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name="com.example.weibo_yamba.YambaApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -33,6 +34,9 @@
             android:name="com.example.weibo_yamba.PrefsActivity"
             android:label="@string/titlePrefs" >
         </activity>
+
+        <service android:name="com.example.weibo_yamba.UpdaterService" >
+        </service>
     </application>
 
 </manifest>
