--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,12 +44,12 @@
 
         <activity
             android:name="com.example.weibo_yamba.SSO_Main"
-            android:label="@string/app_name" >
-            <intent-filter>
+            android:label="@string/app_name" ><intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity android:name="com.example.weibo_yamba.StatusActivity" >
         </activity>
